<resources>
    <string name="app_name">ContactManager</string>
    <string name="action_settings">Settings</string>
    <string name="contact_creator">Contact Creator</string>
    <string name="contact_name">Contact Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="add_contact">Add Contact</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter your Email address</string>
    <string name="err_msg_phone">Enter phone number</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="textview">My Contacts</string>
    <string name="caddress">Address</string>
    <string name="ccontact_name">Contact Name</string>
    <string name="cemail">Email</string>
    <string name="phone">Phone</string>
    <string name="imagecontact">imagecontact</string>
</resources>
