<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivcontactimage"
        android:contentDescription="@string/imagecontact"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/ccontact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvcontactname"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:text="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvphone"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:text="@string/cemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvemail"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:textAppearanceMedium"/>

    <TextView
        android:text="@string/caddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvaddress"
        android:layout_marginTop="5dp"
        android:textAppearance="?android:textAppearanceMedium"/>
    </LinearLayout>
</LinearLayout>