<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yadla.contactmanager.MainActivity"
    tools:showIn="@layout/activity_main">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_marginTop="-5dp"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
                <RelativeLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvcontactcreator"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_creator"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"/>

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:srcCompat="@mipmap/ic_no_user"
                        android:id="@+id/contactImage"
                        android:contentDescription="@string/imagecontact"
                        android:scaleType="fitCenter"
                        android:layout_below="@+id/tvcontactcreator"
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true" />



                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/contactImage">
                        <EditText
                            android:id="@+id/etname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contact_name"
                            android:maxLength="25"
                            android:ems="10"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_number_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name_layout">
                        <EditText
                            android:id="@+id/etphonenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="10"
                            android:hint="@string/phone_number"
                            android:inputType="phone"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/Email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phone_number_layout">
                        <EditText
                            android:id="@+id/etemail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/address_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/Email_layout">
                        <EditText
                            android:id="@+id/etaddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="20"
                            android:hint="@string/address"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/address_layout"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:text="@string/add_contact"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
    </ScrollView>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:id="@+id/textView" />

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/contactList" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
